# cpp-project-PC-winkel

./: CMakeLists.txt  README.md  project.xml
src/: CapString.hpp  Company.cpp  Company.h  Component.cpp  Component.h  ComponentView.cpp  ComponentView.h  ComputerShop.cpp  ComputerShop.h  Customer.cpp  Customer.h  CustomerProperties.cpp  CustomerProperties.h  CustomerView.cpp  CustomerView.h  Enumerate.hpp  FileSystem.cpp  FileSystem.h  Filter.cpp  Filter.h  Input.cpp  Input.h  Invoice.cpp  Invoice.h  Menus.cpp  Menus.h  Shop.cpp  Shop.h  main.cpp  types.h
src/Components/: CPU.cpp  CPU.h  Case.cpp  Case.h  ComponentBase.cpp  ComponentBase.h  ComponentProperties.cpp  ComponentProperties.h  GPU.cpp  GPU.h  HDD.cpp  HDD.h  MB.cpp  MB.h  Memory.cpp  Memory.h  Motherboard.cpp  Motherboard.h  PS.cpp  PS.h  PowerSupply.cpp  PowerSupply.h  Storage.cpp  Storage.h
test/: CapStringTest.h  DeserializeTest.h  MenuTest.h  SerializeTest.h  test.cpp
